Thêm code tìm wriable dir với Nim

--- a/02.System_Enumeration_and_data_gathering/02.Priv_Enum/Makefile
+++ b/02.System_Enumeration_and_data_gathering/02.Priv_Enum/Makefile
@@ -1,3 +1,5 @@
 all:
 	cp 04_suid_bin.nim /tmp/suid_bin.nim
 	nim c -d:release /tmp/suid_bin.nim
+	cp 05_writable_dir.nim /tmp/writable_dir.nim
+	nim c -d:release /tmp/writable_dir.nim
