Thêm code tìm các file schedule, systemd có thể sửa được

--- a/02.System_Enumeration_and_data_gathering/02.Priv_Enum/Makefile
+++ b/02.System_Enumeration_and_data_gathering/02.Priv_Enum/Makefile
@@ -3,3 +3,5 @@ all:
 	nim c -d:release /tmp/suid_bin.nim
 	cp 05_writable_dir.nim /tmp/writable_dir.nim
 	nim c -d:release /tmp/writable_dir.nim
+	cp 06_writable_schedule.nim /tmp/writable_schedule.nim
+	nim c -d:release /tmp/writable_schedule.nim
